@@ -136,6 +136,9 @@ class JInstallation extends JApplication
 			} else {
 				jimport('joomla.language.helper');
 				$options['language'] = JLanguageHelper::detectLanguage();
+				if (empty($options['language'])) {
+					$options['language'] = 'en-GB';
+				}
 			}
 		}
 
