@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+10-Feb-2010 Christophe Demko
++ Detecting browser language in frontend
+
 10-Feb-2010 Hannes Papenberg
 # Fixed bug in JFilterInput
 
